# autoMakeMKV

./: .gitignore  README.md  pyproject.toml  setup.py
automakemkv/: __init__.py  db_utils.py  makemkv.py  mkvLookup.py  ripper.py  systemtray.py  utils.py
automakemkv/mediaInfo/: __init__.py  gui.py  utils.py
mediaID/: gui.py  mkvLookup.py  parseMakeMKV.py
src/automakemkv/: __init__.py  db_utils.py  disc_hash.py  makemkv.py  mkv_lookup.py  paths.py  ripper.py  settings.py  systemtray.py  testing.txt  thediscdb_utils.py  udev_testing.py  udev_watchdog.py  utils.py
src/automakemkv/mediaInfo/: __init__.py  gui.py  utils.py
src/automakemkv/path_utils/: __init__.py  plex.py  video_utils.py
src/automakemkv/paths/: __init__.py  plex.py  utils.py
src/automakemkv/systemtray/: main.py  progress.py  status.py  utils.py  widgets.py
src/automakemkv/ui/: __init__.py  base_widgets.py  dialogs.py  main.py  metadata.py  progress.py  utils.py  widgets.py
src/automakemkv/watchdogs/: __init__.py  base.py  linux.py  windows.py
