
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "automakemkv"
version = "3.12.0"
description = "Package for automagically ripping media with MakeMKV"
readme = "README.md"
authors = [
    {name="Kyle R. Wodzicki", email="krwodzicki@gmail.com"},
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

requires-python = ">=3.9"

dependencies = [
    "PyQt5",
    "pyudev ; platform_system == 'Linux'",
    "pywin32 ; platform_system == 'Windows'",
    "WMI ; platform_system == 'Windows'",
]

[project.scripts]
autoMakeMKV = "automakemkv.ui.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automakemkv = ['resources/*.png', 'resources/*.ico']
